# pymmcore-MDA-writers

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
examples/: tiff_writer.py  zarr_writer.py
pymmcore_mda_writers/: __init__.py  _version.py  _writers.py
tests/: conftest.py  test-config.cfg  test_pymmcore_mda_writers.py  test_utils.py
