[metadata]
name = pymmcore_MDA_writers
description = MDA writers for pymmcore-plus
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ianhi/pymmcore-MDA-writers
author = Ian Hunt-Isaak
author_email = ianhuntisaak@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source Code =https://github.com/ianhi/pymmcore-MDA-writers

[options]
packages = find:
install_requires =
    numpy
    pymmcore-plus
    zarr
python_requires = >=3.7
zip_safe = False

[options.extras_require]
dev =
    black
    flake8
    flake8-docstrings
    ipython
    isort
    jedi<0.18.0
    mypy
    pre-commit
    pydocstyle
    pytest
testing =
    pytest
    pytest-cov
    tox
    tox-conda

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore = D100, D213, D401, D413, D107, W503

[isort]
profile = black
src_paths = pymmcore_mda_writers

[pydocstyle]
match_dir = pymmcore_mda_writers
convention = numpy
add_select = D402,D415,D417
ignore = D100, D213, D401, D413, D107

[tool:pytest]
addopts = -W error

[mypy]
files = pymmcore_mda_writers
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
implicit_reexport = False
show_column_numbers = True
show_error_codes = True
ignore_missing_imports = True
